--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "start-server-and-test dev 3000 cypress:open",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -22,5 +24,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "cypress": "^12.4.0",
+    "start-server-and-test": "^1.15.3"
   }
 }
