--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pino-pretty": "^9.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "cypress": "^12.4.0",
